add router and connect backend

--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -1,12 +1,15 @@
+body {
+  background-color: #233038;
+}
 .notes-container {
-    display: flex;
-    flex: 1;
-    min-width: 0;
+  display: flex;
+  flex: 1;
+  min-width: 0;
 }
 
 .notes-list {
-    width: 15%;
-    border-right: 1px solid #d5d0d0;
-    width: 20%;
-    height: 100%;
+  width: 15%;
+  border-right: 1px solid #d5d0d0;
+  width: 20%;
+  height: 100%;
 }
