--- a/front-end/src/components/folder/Folder.module.css
+++ b/front-end/src/components/folder/Folder.module.css
@@ -1,21 +1,22 @@
 .folder:hover,
 .folder.active {
-    background-color: rgb(206, 207, 208);
+  background-color: #23303849;
 }
 .folder {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 14px;
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
-    background-color: transparent;
-    gap: 10px;
-    margin: 0 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+  background-color: transparent;
+  gap: 10px;
+  margin: 0 10px;
+  color: rgba(255, 255, 255, 0.49);
 }
 
 .folder img {
-    width: 14px;
-    height: 14px;
+  width: 14px;
+  height: 14px;
 }
