--- a/front-end/src/components/folders-list/FoldersList.module.css
+++ b/front-end/src/components/folders-list/FoldersList.module.css
@@ -1,17 +1,25 @@
 .folders-list {
-    flex: 1;
+  width: 270px;
+  margin-left: 30px;
 }
-
 .new-folder-input {
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid grey;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.603);
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-bottom: 2px solid rgba(250, 250, 252, 0.5);
 }
-
+.new-folder-input:focus {
+  outline: none;
+}
+.new-folder-input::placeholder {
+  color: rgba(255, 255, 255, 0.171);
+}
 .folders-column {
-    background-color: rgb(221, 220, 220);
-    border-right: 1px solid #d5d0d0;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  background-color: #30454c;
+  border-right: 1px solid #d5d0d01c;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
