--- a/front-end/src/components/title/Title.module.css
+++ b/front-end/src/components/title/Title.module.css
@@ -1,7 +1,9 @@
 .title {
-    font-size: 12px;
-    font-weight: 600;
-    color: grey;
-
-    margin: 10px;
+  color: rgba(199, 197, 197, 0.719);
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px;
+  margin: 10px;
+  margin-top: 30px;
 }
