--- a/front-end/src/components/note/Note.module.css
+++ b/front-end/src/components/note/Note.module.css
@@ -1,41 +1,49 @@
 .image {
-    width: 12px;
-    height: 12px;
+  width: 12px;
+  height: 12px;
 }
 
 .container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .note-editor {
-    padding: 20px;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  box-sizing: border-box;
 }
 
 .note-editor input {
-    font-size: 25px;
-    border: none;
-    font-weight: 600;
-    background-color: transparent;
-    display: block;
+  color: rgba(255, 255, 255, 0.712);
+  font-size: 25px;
+  border: none;
+  font-weight: 600;
+  background-color: transparent;
+  display: block;
+  outline: none;
 }
 
 .note-editor textarea {
-    display: block;
-    border: 0;
-    flex: 1;
+  color: rgba(255, 255, 255, 0.452);
+  font-size: 14px;
+  display: block;
+  border: 0;
+  flex: 1;
 
-    background-color: transparent;
-    font-family: inherit;
+  outline: none;
+  font-weight: 300;
+  letter-spacing: 1.4px;
+  line-height: 30px;
+  background-color: transparent;
+  font-family: inherit;
 }
