--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -9,7 +9,7 @@ body {
 
 .notes-list {
   width: 15%;
-  border-right: 1px solid #d5d0d0;
+  border-right: 1px solid rgba(255, 255, 255, 0.11);
   width: 20%;
   height: 100%;
 }
