--- a/front-end/src/components/top-bar/TopBar.module.css
+++ b/front-end/src/components/top-bar/TopBar.module.css
@@ -5,4 +5,5 @@
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.11);
 }
