adding delete function, redirect, and install toast, chakra ui

--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -13,3 +13,12 @@ body {
   width: 20%;
   height: 100%;
 }
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 190px;
+}
+.wrapper button {
+  margin-top: 7px;
+}
