--- a/front-end/src/components/folders-list/FoldersList.module.css
+++ b/front-end/src/components/folders-list/FoldersList.module.css
@@ -22,3 +22,9 @@
   flex-direction: column;
   height: 100%;
 }
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 90px;
+}
