adding not found page and loader

--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -17,7 +17,8 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 150px;
+  gap: 190px;
+  margin-top: 5px;
 }
 .wrapper button {
   margin-top: 1px;
