--- a/front-end/src/components/not-found/NotFound.module.css
+++ b/front-end/src/components/not-found/NotFound.module.css
@@ -1,12 +1,34 @@
 .error-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
+  background-color: #233038;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  gap: 30px;
 }
-
+.error-page img {
+  width: 100px;
+  height: 100px;
+}
+.error-page h2 {
+  font-weight: 600;
+  font-size: 30px;
+  color: rgba(240, 248, 255, 0.555);
+}
+.error-page p {
+  color: rgba(240, 248, 255, 0.322);
+}
 .error-page a {
-    color: blue;
+  background-color: #e6382c;
+  color: white;
+  border-radius: 10px;
+  padding: 15px;
+  font-weight: 500;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
