--- a/front-end/src/components/folders-list/FoldersList.module.css
+++ b/front-end/src/components/folders-list/FoldersList.module.css
@@ -26,7 +26,24 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 90px;
+  gap: 30px;
+}
+
+.image {
+  width: 12px;
+  height: 12px;
+}
+
+.container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
