--- a/front-end/src/components/folders-list/FoldersList.module.css
+++ b/front-end/src/components/folders-list/FoldersList.module.css
@@ -29,11 +29,6 @@
   gap: 30px;
 }
 
-.image {
-  width: 12px;
-  height: 12px;
-}
-
 .container {
   flex: 1;
   display: flex;
@@ -44,8 +39,14 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  margin-left: 10px;
 }
-
+.folders {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
 ::-webkit-scrollbar {
   width: 1px;
 }
