--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #233038;
-}
 .notes-container {
   display: flex;
   flex: 1;
@@ -24,9 +21,14 @@ body {
   margin-top: 1px;
 }
 .archive {
-  margin-top: 25px;
+  position: absolute;
+  width: 16%;
+  bottom: 10px;
+  margin-left: 6px;
   border-radius: 10px;
 }
-.archive:hover {
-  background-color: rgba(184, 184, 184, 0.062);
+.archive:hover,
+.archive.active {
+  background-color: rgba(184, 184, 184, 0.082);
+  border-radius: 10px;
 }
