--- a/front-end/src/components/notes-list/NotesList.module.css
+++ b/front-end/src/components/notes-list/NotesList.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex: 1;
   min-width: 0;
+  background-color: #1b222e;
 }
 
 .notes-list {
@@ -14,7 +15,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   padding: 10px;
 }
 .form {
