--- a/front-end/src/components/folders-list/FoldersList.module.css
+++ b/front-end/src/components/folders-list/FoldersList.module.css
@@ -50,6 +50,23 @@
   gap: 15px;
 }
 
+.settings {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.062);
+  border-radius: 10px;
+  width: 40px;
+  height: 100px;
+  top: 50px;
+  left: 230px;
+}
+.settings-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 7px;
+  gap: 10px;
+}
+
 ::-webkit-scrollbar {
   width: 1px;
 }
